tests/invalid/import_from_inside_class_body/main.py
class C:
    from imports import module_a


def main() -> None:
    x: int = 1
